--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ h6 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("/images/homepage/hero-sec-bg.png") no-repeat bottom
+  background: url("/images/homepage/hero-sec-bg.webp") no-repeat bottom
     center/cover;
   z-index: -1;
 }
