--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ h6 {
 .hero__count {
   border: 1px solid var(--color-border-transparent);
   border-width: 1px 0;
-  padding: 20px;
+  padding: 40px 20px;
   text-align: center;
   z-index: 1;
   position: relative;
